--- a/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
@@ -1,3 +1,10 @@
+{% set params = {} %}
+{% if search %}
+    {% set params = prams|merge({'search': search}) %}
+{% endif %}
+{% if opportunity_type %}
+    {% set params = prams|merge({'opportunity_type': opportunity_type}) %}
+{% endif %}
 
 <div class="content-heading">
     <h1>{{ 'Partnering Opportunities'|t }}</h1>
@@ -16,26 +23,23 @@
         {% if results is not null %}
             {% if total > 0 %}
                 <div class="row">
-                    <h3 class="heading-xlarge">{{ total }} <span class="font-xsmall">{{ 'opportunities '|t }}</span></h3> 
+                    <h3 class="heading-xlarge">{{ total }} <span class="font-xsmall">{{ 'opportunities '|t }}</span>
+                    </h3>
                 </div>
                 {% for row in results %}
                     <div class="row row-bordered">
                         <h3>
-                            <a href="{{ url(
-                            'opportunities.details',
-                            {'profileId': row._id, 'search': search, 'opportunity_type': opportunity_type}
-                            ) }}"
-                               id="opportunity-link">
+                            <a href="{{ url('opportunities.details', params|merge({'profileId': row._id})) }}" id="opportunity-link">
                                 {{ row._source.title }}
                             </a>
                         </h3>
-                            
+
                         <p class="meta-inline font-small">
                             {# lastupdated #}
                             {% if row._source.date|date('U') > '-5 days'|date('U') %}
                                 {{ row._source.date|time_diff }} |
                             {% endif %}
-                            
+
                             {# organisation id #}
                             {{ row._id }} |
 
@@ -48,19 +52,16 @@
                             {{ row._source.country }}
                         </p>
                     </div>
-                    
+
                 {% endfor %}
 
                 {% include 'themes/custom/een/templates/pagination.html.twig'
                 with {
-                    'route': route,
-                    'params': {
-                        'search': search,
-                        'opportunity_type': opportunity_type
-                    },
-                    'page': page,
-                    'resultPerPage': resultPerPage,
-                    'pageTotal': pageTotal
+                'route': route,
+                'params': params,
+                'page': page,
+                'resultPerPage': resultPerPage,
+                'pageTotal': pageTotal
                 } only %}
 
             {% else %}
