--- a/drupal/themes/custom/een/scss/een.scss
+++ b/drupal/themes/custom/een/scss/een.scss
@@ -233,10 +233,8 @@ form[data-drupal-selector="opportunity-search-form"] {
         box-sizing: border-box;
         max-width: 100%;
         display: block;
-        margin: 0 0 18px 0;
-        display: block;
-        position: relative;
-        top: 19px;
+        float:left;
+        margin: 0.2em 0 0.4em 0;
     }
     
     .form-item-search, .fieldgroup  {
