--- a/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
@@ -53,7 +53,7 @@
                     <li><a href="#partner_expertise_sought">{{ 'Partner expertise sought'|t }}</a></li>
                     <li><a href="#advantages_and_innovations">{{ 'Advantages and innovations'|t }}</a></li>
                     <li><a href="#development_stage">{{ 'Development Stage'|t }}</a></li>
-                    <li><a href="#ipr">{{ 'IPR'|t }}</a></li>
+                    <li><a href="#ipr">{{ 'Intellectual Property Rights (IPR)'|t }}</a></li>
                 </ul>
 
                 <a class="button-brand" href="#express_your_interest">Apply for this project</a>
@@ -165,7 +165,7 @@
                 {{ form.form_id }}
                 <hr/>
                 <div>
-                    <h4 class="heading-small">{{ 'By sumitting this information, I understand that:'|t }}</h4>
+                    <h4 class="heading-small">{{ 'By submitting this information, I understand that:'|t }}</h4>
                     <p>{{ 'An EEN adviser  will review your expression of interest and share with their client if it\'s what they\'re looking for. If we connect you, our involvement will step back at it, but we need you to keep us informed of follow on discussions and negociations'|t }}</p>
                 </div>
                 {{ form.actions }}
