--- a/drupal/modules/custom/events/templates/events-search.html.twig
+++ b/drupal/modules/custom/events/templates/events-search.html.twig
@@ -12,12 +12,8 @@
             {% for row in results %}
                 <div class="row row-bordered">
                     <h3>
-                        {% if row._source.contact_attributes and row._source.contact_attributes matches '/^http*/' %}
-                            <a href="{{ row._source.contact_attributes }}" target="_blank">
-                                {{ row._source.title }}
-                            </a>
-                        {% elseif row._source.location_website and row._source.location_website matches '/^http*/' %}
-                            <a href="{{ row._source.location_website }}" target="_blank">
+                        {% if row._source.url and row._source.url matches '/^http*/' %}
+                            <a href="{{ row._source.url }}" target="_blank">
                                 {{ row._source.title }}
                             </a>
                         {% else %}
@@ -32,7 +28,7 @@
                     </h3>
                     <p class="meta-inline font-small">
                         {# Start and End date #}
-                        {% if row._source.start_date != row._source.end_date %}
+                        {% if row._source.start_date|date("d-m-Y") != row._source.end_date|date("d-m-Y") %}
                             {{ row._source.start_date|date("d-m-Y") }} |
                             {{ row._source.end_date|date("d-m-Y") }} |
                         {% else %}
