added ajax api request

--- a/drupal/themes/custom/een/templates/form/input.html.twig
+++ b/drupal/themes/custom/een/templates/form/input.html.twig
@@ -10,4 +10,4 @@
  * @see template_preprocess_input()
  */
 #}
-<input{{ attributes.removeClass('error') }} />{{ children }}
+<input ng-submit="searchOpps"{{ attributes.removeClass('error') }} />{{ children }}
