EEN-128: Multi Search on opportunity

--- a/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
@@ -73,7 +73,7 @@
         {% if results2 is not null %}
             {% if total > 0 %}
                 <div class="row">
-                    <h3 class="heading-xlarge">{{ total }} <span class="font-xsmall">{{ 'opportunities '|t }}</span>
+                    <h3 class="heading-xlarge">{{ total2 }} <span class="font-xsmall">{{ 'opportunities '|t }}</span>
                     </h3>
                 </div>
                 {% for row in results2 %}
@@ -123,7 +123,7 @@
         {% if results3 is not null %}
             {% if total > 0 %}
                 <div class="row">
-                    <h3 class="heading-xlarge">{{ total }} <span class="font-xsmall">{{ 'opportunities '|t }}</span>
+                    <h3 class="heading-xlarge">{{ total3 }} <span class="font-xsmall">{{ 'opportunities '|t }}</span>
                     </h3>
                 </div>
                 {% for row in results3 %}
