EEN-89 Base EEN styling

--- a/drupal/themes/custom/een/templates/layout/page.html.twig
+++ b/drupal/themes/custom/een/templates/layout/page.html.twig
@@ -100,6 +100,8 @@
     <div class="footer-wrapper">
         <div class="footer-meta">
             
+            <img src="/themes/custom/een/img/EEN-Logo-Main.png"/>
+            
             {% if page.footer_first or page.footer_second or page.footer_third or page.footer_fourth %}
                 <div class="footer-meta-inner">
                     {{ page.footer_first }}
