--- a/drupal/themes/custom/een/templates/form/input.html.twig
+++ b/drupal/themes/custom/een/templates/form/input.html.twig
@@ -10,4 +10,4 @@
  * @see template_preprocess_input()
  */
 #}
-<input ng-model="query"{{ attributes.removeClass('error') }} />{{ children }}
+<input {{ attributes.removeClass('error') }} />{{ children }}
