EEN-128: Update UI

--- a/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
@@ -71,7 +71,7 @@
     </div>
     <div class="column-one-third">
         {% if results2 is not null %}
-            {% if total > 0 %}
+            {% if total2 > 0 %}
                 <div class="row">
                     <h3 class="heading-xlarge">{{ total2 }} <span class="font-xsmall">{{ 'opportunities '|t }}</span>
                     </h3>
@@ -121,7 +121,7 @@
     </div>
     <div class="column-one-third">
         {% if results3 is not null %}
-            {% if total > 0 %}
+            {% if total3 > 0 %}
                 <div class="row">
                     <h3 class="heading-xlarge">{{ total3 }} <span class="font-xsmall">{{ 'opportunities '|t }}</span>
                     </h3>
