--- a/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
@@ -23,37 +23,42 @@
         {% if results is not null %}
             {% if total > 0 %}
                 <div class="row">
-                    <h3 class="heading-xlarge">{{ total }} <span class="font-xsmall">{{ 'opportunities '|t }}</span>
-                    </h3>
+                    <h3 class="heading-xlarge results-list-heading">{{ total|number_format(0, '.', ',') }} <span class="font-xsmall">{{ 'opportunities '|t }}</span></h3>                    
                 </div>
-                {% for row in results %}
-                    <div class="row row-bordered">
-                        <h3>
-                            <a href="{{ url('opportunities.details', params|merge({'profileId': row.id})) }}" id="opportunity-link">
-                                {{ row.title }}
-                            </a>
-                        </h3>
+                    
+                <div class="results-list">    
+                    <p class="list-subtext">Get updates to this list  <a href="#" class="follow-list"><i class="fa fa-envelope" aria-hidden="true"></i> Email</a> <a href="#" class="follow-list"><i class="fa fa-rss" aria-hidden="true"></i> RSS</a></p>
+                    
+                    {% for row in results %}
+                        <div class="row row-bordered">
+                            <h3>
+                                <a href="{{ url('opportunities.details', params|merge({'profileId': row.id})) }}" id="opportunity-link">
+                                    {{ row.title }}
+                                </a>
+                            </h3>
+                                
+                            <p class="description">{{ row.summary| truncate(240, true) }} <a href="{{ url('opportunities.details', params|merge({'profileId': row.id})) }}">more</a></p>
+                            
+                            <p class="meta-inline font-small">
+                                {# lastupdated #}
+                                {% if row.date|date('U') > '-5 days'|date('U') %}
+                                    {{ row.date|time_diff }} |
+                                {% endif %}
 
-                        <p class="meta-inline font-small">
-                            {# lastupdated #}
-                            {% if row.date|date('U') > '-5 days'|date('U') %}
-                                {{ row.date|time_diff }} |
-                            {% endif %}
 
-                            {# organisation id #}
-                            {{ row.id }} |
+                                {# Country of origin #}
+                                {% set flag = row.country_code|lower %}
+                                {% if flag == 'uk' %}
+                                    {% set flag = 'gb' %}
+                                {% endif %}
+                                <span class="flag-icon flag-icon-{{ flag }}"></span>
+                                {{ row.country }}
+                            </p>
+                        </div>
+                       
 
-                            {# Country of origin #}
-                            {% set flag = row.country_code|lower %}
-                            {% if flag == 'uk' %}
-                                {% set flag = 'gb' %}
-                            {% endif %}
-                            <span class="flag-icon flag-icon-{{ flag }}"></span>
-                            {{ row.country }}
-                        </p>
-                    </div>
-
-                {% endfor %}
+                    {% endfor %}
+                </div>
 
                 {% include 'themes/custom/een/templates/pagination.html.twig'
                 with {
