--- a/drupal/themes/custom/een/scss/een.scss
+++ b/drupal/themes/custom/een/scss/een.scss
@@ -5,6 +5,8 @@
 /* direct import of flags elements from the node module */
 @import 'flag-icon';
 
+@import 'font-awesome';
+
 @import 'variables';
 @import 'font';
 
@@ -141,9 +143,13 @@ a.back-link {
         @extend .font-medium;
     }
     h2 {
-        margin-top: 0;
+        margin: 0;
         @extend .font-large;
         font-weight: bold;
+    }
+    h3 {
+         @extend .font-medium;
+         width:80%;
     }
 }
 
@@ -159,6 +165,14 @@ a.back-link {
 
 .single-header-one-col {
     margin-top: 0;
+}
+
+
+form {
+    ::-webkit-input-placeholder {   font-size:0.9em; font-style: italic;   }
+    :-moz-placeholder { /* Firefox 18- */   font-size:0.9em; font-style: italic; }
+    ::-moz-placeholder {  /* Firefox 19+ */   font-size:0.9em; font-style: italic; }
+    :-ms-input-placeholder {   font-size:0.9em; font-style: italic;  }
 }
 
 .form-opportunities {
@@ -191,10 +205,7 @@ a.back-link {
             margin:14px 0 0 0;
         }
     }
-    ::-webkit-input-placeholder {   font-size:0.9em; font-style: italic;   }
-    :-moz-placeholder { /* Firefox 18- */   font-size:0.9em; font-style: italic; }
-    ::-moz-placeholder {  /* Firefox 19+ */   font-size:0.9em; font-style: italic; }
-    :-ms-input-placeholder {   font-size:0.9em; font-style: italic;  }
+    
     
     .form-control {
         width:100%;
@@ -232,6 +243,11 @@ form[data-drupal-selector="opportunity-search-form"] {
         border:1px solid #9B9B9B;
     }
     
+    .form-label {
+        color:#0B0C0C;
+        font-weight: 600;
+    }
+    
     fieldset { 
         width:auto;
     }
@@ -242,6 +258,8 @@ form[data-drupal-selector="opportunity-search-form"] {
         display: block;
         float:left;
         margin: 0.2em 0 0.4em 0;
+        color:#0B0C0C;
+        font-weight: 600;
     }
     
     .form-item-search, .fieldgroup  {
@@ -272,12 +290,8 @@ form[data-drupal-selector="opportunity-search-form"] {
     
     .block-label {
         padding: 14px 14px 7px 48px;
+        
         input[type=checkbox] {
-          //  position: absolute !important;
-           // top: -9999px !important;
-           // left: -9999px !important
-           //z-index: -1!important;
-           //outline:none;
            height: 1px;
            width: 1px;
            overflow: hidden;
@@ -342,12 +356,49 @@ form[data-drupal-selector="opportunity-search-form"] {
 }
 
 .row-bordered {
-    border-bottom: 1px solid #DDDDDD; 
-    padding:7px;
+    border-top: 2px solid #DDDDDD; 
+    padding:14px 0;
+    
+    &:first-of-type {
+        border-top:none;
+    }
     
     h3 {
-       font-weight: bold; 
+       font-weight: 600; 
        line-height: 1.1em;
+    }
+}
+
+.results-list-heading {
+    margin-bottom: 14px;
+}
+.results-list {
+    border-top:2px solid #DDDDDD;
+    border-bottom:2px solid #DDDDDD;
+    margin:0;
+    padding:14px 0;
+    
+    p {
+         @extend .font-xsmall;
+    }
+    .list-subtext {
+        .follow-list {
+            margin: 0 0 0 10px;
+            font-weight:bold;
+            .fa {
+                color:black;
+              
+            }
+        }
+    }
+    p.description {        
+        margin-bottom:0.5em;
+        em {
+            background:yellow;
+        }
+        a {
+            font-weight: 600;
+        }
     }
 }
 
@@ -737,4 +788,9 @@ form[data-drupal-selector="opportunity-search-form"] {
             
         }
     }
+    
+    .content-heading h3 {
+        width: auto; 
+    }
+    
 }
