EEN-170: Update Accessibility to the site

--- a/drupal/modules/custom/events/templates/events-search.html.twig
+++ b/drupal/modules/custom/events/templates/events-search.html.twig
@@ -17,11 +17,7 @@
                                 {{ row._source.title }}
                             </a>
                         {% else %}
-                            <a href="{{ url(
-                            'events.details',
-                            {'eventId': row._id}
-                            ) }}"
-                               id="opportunity-link">
+                            <a href="{{ url('events.details', {'eventId': row._id}) }}">
                                 {{ row._source.title }}
                             </a>
                         {% endif %}
