--- a/drupal/themes/custom/een/templates/block/block--een-main-menu.html.twig
+++ b/drupal/themes/custom/een/templates/block/block--een-main-menu.html.twig
@@ -34,14 +34,14 @@
 {% set heading_id = attributes.id ~ '-menu'|clean_id %}
 <nav role="navigation" id="proposition-menu" aria-labelledby="{{ heading_id }}"{{ attributes|without('role', 'aria-labelledby') }}>
     
-    <a href="#proposition-links" class="js-header-toggle menu"></a>
+    <a href="#proposition-links" class="js-header-toggle menu" title="navigation burger"></a>
     
     {# Label. If not displayed, we still provide it for screen readers. #}
     {% if not configuration.label_display %}
         {% set title_attributes = title_attributes.addClass('visually-hidden') %}
     {% endif %}
     {{ title_prefix }}
-    <h2 id="proposition-name" {{ title_attributes }}>{{ configuration.label }}</h2>
+    <h2 id="{{ heading_id }}" {{ title_attributes }}>{{ configuration.label }}</h2>
     {{ title_suffix }}
 
     {# Menu. #}
