--- a/drupal/themes/custom/een/templates/layout/page.html.twig
+++ b/drupal/themes/custom/een/templates/layout/page.html.twig
@@ -63,7 +63,7 @@
 {{ page.help }}
 
 <main role="main" id="content">
-    <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
+    <a id="main-content" title="Main content" tabindex="-1"></a>{# link is in html.html.twig #}
 
     <div class="phase-banner-alpha">
         <p>
@@ -100,7 +100,7 @@
     <div class="footer-wrapper">
         <div class="footer-meta">
             
-            <img src="/themes/custom/een/img/EEN-Logo-Main.png"/>
+            <img src="/themes/custom/een/img/EEN-Logo-Main.png" alt="EEN Logo Footer"/>
             
             {% if page.footer_first or page.footer_second or page.footer_third or page.footer_fourth %}
                 <div class="footer-meta-inner">
