--- a/drupal/themes/custom/een/templates/navigation/breadcrumb.html.twig
+++ b/drupal/themes/custom/een/templates/navigation/breadcrumb.html.twig
@@ -9,7 +9,7 @@
 #}
 {% if breadcrumb %}
     <nav class="breadcrumbs" role="navigation" aria-labelledby="system-breadcrumb">
-        <h2 class="visually-hidden">{{ 'Breadcrumb'|t }}</h2>
+        <h2 id="system-breadcrumb" class="visually-hidden">{{ 'Breadcrumb'|t }}</h2>
         <ol>
             {% for item in breadcrumb %}
                 <li>
